[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "furs"
version = "1.0.0"
dependencies = [
  "transformcl",
  "mpi4py",
  "healpy"
]
dynamic = ["version"]
requires-python = ">=3.8"
authors = [{name = "Shikhar Mittal", email = "shikhar.mittal4@gmail.com"}]
description = "Foregrounds due to Unresolved Radio Sources"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["extragalactic","unresolved radio sources","foregrounds"]
classifiers = [
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3.8",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Natural Language :: English",
"Operating System :: OS Independent",
"Topic :: Scientific/Engineering :: Astronomy"
]

[project.urls]
Repository = "https://github.com/shikharmittal04/furs.git"
