[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epspy"
version = "1.0.0"
dependencies = [
  "transformcl",
  "mpi4py",
  "healpy"
]
requires-python = ">=3.8"
authors = [{name = "Shikhar Mittal", email = "shikhar.mittal4@gmail.com"}]
description = "Extragalactic Point Sources"
readme = "README.rst"
license = {file = "LICENSE"}
keywords = ["extragalactic","point sources","foregrounds"]
classifiers = [
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3.8",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Natural Language :: English",
"Operating System :: OS Independent",
"Topic :: Scientific/Engineering :: Astronomy"
]

[project.urls]
Repository = "https://github.com/shikharmittal04/epspy.git"
